--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "dakodig/yii2-indonesian-date",
     "description": "Memudahkan memanipulasi tanggal dalam bahasa indonesia",
     "type": "yii2-extension",
-    "keywords": ["yii2","extension","date","datetime"],
+    "keywords": ["yii2","extension","date","datetime","helper"],
     "license": "MIT",
     "authors": [
         {
@@ -11,11 +11,18 @@
         }
     ],
     "require": {
+        "php": ">=7.0",
         "yiisoft/yii2": "~2.0.0"
     },
     "autoload": {
         "psr-4": {
             "dakodig\\yii2indonesiadate\\": ""
         }
-    }
+    },
+    "repositories":[
+        {
+            "type": "git",
+            "url": "https://github.com/dakodig/yii2-indonesia-date"
+        }
+    ]
 }
